# napari_pyclesperanto_assistant

./: .gitignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  _config.yml  jython_test.py  jython_test2.py  requirements.txt  setup.cfg  setup.py  test.ipynb  tox.ini
.napari/: config.yml
example_data/: Sonneberg100_Resampled_RotY-40_MaxZ.tif
installation_help/: pyopencl-2019.1.2+cl21-cp35-cp35m-win_amd64.whl  pyopencl-2020.3.1+cl12-cp36-cp36m-win_amd64.whl  pyopencl-2020.3.1+cl12-cp38-cp38-win_amd64.whl  pyopencl-2021.2.5+cl12-cp37-cp37m-win_amd64.whl  pyopencl-2021.2.5+cl12-cp38-cp38-win_amd64.whl  pyopencl-2021.2.5+cl12-cp39-cp39-win_amd64.whl  readme.md
napari_pyclesperanto_assistant/: __init__.py  __main__.py  _advanced_statistics.py  _categories.py  _convert_to_numpy.py  _napari_cle_functions.py  _napari_filters.py  _napari_hook_implementations.py  _napari_measurements.py  _napari_plugin.py  _napari_projections.py  _napari_pyclesperanto_assistant.py  _napari_segmentation.py  _napari_transforms.py  _napari_utilities.py  _neighborhood_statistics.py  _pipeline.py  _statistics_of_labeled_pixels.py  _version.py  _workflow_io_utility.py  idfg_reader.py
pyclesperanto_assistant/: __init__.py  __main__.py
tests/: test_dock_widget.py
workflow test/: Adding Selection Hints to root function comboboxes.ipynb  Bug Image Darkening Tests.ipynb  Long Workflow Working Check.ipynb  Minimal Working Example.ipynb  Testing if multiple node workflows is fixed.ipynb  Testing simplified loading.ipynb  Troubleshooting multi inpu image functions.ipynb  Untitled.ipynb  blobs.tif  (+14 more)
(+38 files in other folders)
