# setup.cfg
[metadata]
url = https://github.com/clEsperanto/napari_pyclesperanto_assistant/
project_urls =
    Bug Tracker = https://github.com/clEsperanto/napari_pyclesperanto_assistant/issues
    Documentation = https://github.com/clEsperanto/napari_pyclesperanto_assistant/
    Source Code = https://github.com/clEsperanto/napari_pyclesperanto_assistant
    User Support = https://forum.image.sc/tag/clij
classifiers =
    Framework :: napari
    License :: OSI Approved :: BSD License

